; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_random_dsl_prop.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_random_dsl_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZFS_PROP_CHECKSUM = common dso_local global i64 0, align 8
@ZIO_CHECKSUM_OFF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @ztest_random_dsl_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ztest_random_dsl_prop(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  br label %4

4:                                                ; preds = %16, %1
  %5 = load i64, i64* %2, align 8
  %6 = call i32 @ztest_random(i64 -1)
  %7 = call i64 @zfs_prop_random_value(i64 %5, i32 %6)
  store i64 %7, i64* %3, align 8
  br label %8

8:                                                ; preds = %4
  %9 = load i64, i64* %2, align 8
  %10 = load i64, i64* @ZFS_PROP_CHECKSUM, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @ZIO_CHECKSUM_OFF, align 8
  %15 = icmp eq i64 %13, %14
  br label %16

16:                                               ; preds = %12, %8
  %17 = phi i1 [ false, %8 ], [ %15, %12 ]
  br i1 %17, label %4, label %18

18:                                               ; preds = %16
  %19 = load i64, i64* %3, align 8
  ret i64 %19
}

declare dso_local i64 @zfs_prop_random_value(i64, i32) #1

declare dso_local i32 @ztest_random(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
